# mqcpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  peer_one.cpp  peer_two.cpp
libmqcpp/: CMakeLists.txt  mq_base.cpp  mq_base.h  mq_receiver.cpp  mq_receiver.h  mq_sender.cpp  mq_sender.h  mqcpp.cpp  mqcpp.h  mqcpp_defs.h  sys_error.h
